--- a/app/views/beta-sprint-6/national-admin/ra-listing-2-ra-published.html
+++ b/app/views/beta-sprint-6/national-admin/ra-listing-2-ra-published.html
@@ -209,7 +209,7 @@
             classes: 'govuk-!-width-one-third'
           },
           {
-            text: "Acroymn"
+            text: "Alternate name"
           },
           {
             text: "Sector"
