--- a/app/views/beta-sprint-6/public-facing/ra-listing-2.html
+++ b/app/views/beta-sprint-6/public-facing/ra-listing-2.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Find a regulated profession
+  Find a regulatory authority
 {% endblock %}
 
 {% block beforeContent %}
@@ -18,29 +18,28 @@
 {% block content %}
 
   <h1 class="govuk-heading-xl">
-    Find a regulated profession
+    Find a regulatory authority
   </h1>
 
   <div class="govuk-grid-row">
 
     <div class="govuk-grid-column-one-third">
 
-      <p class="rpr-listing__results-found--mobile"><span class="govuk-!-font-size-36 govuk-!-font-weight-bold">3</span> professions found.</p>
+      <p class="rpr-listing__results-found--mobile"><span class="govuk-!-font-size-36 govuk-!-font-weight-bold">2</span> authorities found.</p>
 
       <details class="govuk-details rpr-listing__filters-container" data-module="govuk-details" open>
         <summary class="govuk-details__summary rpr-listing__fitlers-details-summary">
           <span class="govuk-details__summary-text">
-            Show filters (2)
+            Show filters
           </span>
         </summary>
         <div class="govuk-details__text rpr-listing__filters-details-text">
 
-          <form action="professions-listing-2" method="post" class="form">
-            {% from "govuk/components/input/macro.njk" import govukInput %}
+          <form action="ra-listing-2" method="post" class="form">
 
             {{ govukInput({
               label: {
-                text: "Profession that you are looking for",
+                text: "Authority that you are looking for",
                 classes: "govuk-label--s",
                 isPageHeading: true
               },
@@ -48,16 +47,14 @@
               hint: {
                 text: "For example, technology"
               },
-              id: "profession-keyword",
-              name: "profession-keyword",
-              value: data['profession-keyword']
+              id: "ra-keyword",
+              name: "ra-keyword",
+              value: data['ra-keyword']
             }) }}
 
-            {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
-
             {{ govukCheckboxes({
-              idPrefix: "profession-nations",
-              name: "profession-nations",
+              idPrefix: "ra-nations",
+              name: "ra-nations",
               classes: "govuk-checkboxes--small rpr-listing__filter",
               fieldset: {
                 legend: {
@@ -73,29 +70,29 @@
                 {
                   value: "england",
                   text: "England",
-                  checked: checked("profession-nations", "england")
+                  checked: checked("ra-nations", "england")
                 },
                 {
                   value: "scotland",
                   text: "Scotland",
-                  checked: checked("profession-nations", "scotland")
+                  checked: checked("ra-nations", "scotland")
                 },
                 {
                   value: "wales",
                   text: "Wales",
-                  checked: checked("profession-nations", "wales")
+                  checked: checked("ra-nations", "wales")
                 },
                 {
                   value: "northern-ireland",
                   text: "Northern Ireland",
-                  checked: checked("profession-nations", "northern-ireland")
+                  checked: checked("ra-nations", "northern-ireland")
                 }
               ]
             }) }}
 
             {{ govukCheckboxes({
-              idPrefix: "profession-industries",
-              name: "profession-industries",
+              idPrefix: "ra-industries",
+              name: "ra-industries",
               classes: "govuk-checkboxes--small rpr-listing__filter",
               fieldset: {
                 legend: {
@@ -111,57 +108,57 @@
                 {
                   value: "construction-engineering",
                   text: "Construction & Engineering",
-                  checked: checked("profession-industries", "construction-engineering")
+                  checked: checked("ra-industries", "construction-engineering")
                 },
                 {
                   value: "education",
                   text: "Education",
-                  checked: checked("profession-industries", "education")
+                  checked: checked("ra-industries", "education")
                 },
                 {
                   value: "finance",
                   text: "Finance",
-                  checked: checked("profession-industries", "finance")
+                  checked: checked("ra-industries", "finance")
                 },
                 {
                   value: "health",
                   text: "Health",
-                  checked: checked("profession-industries", "health")
+                  checked: checked("ra-industries", "health")
                 },
                 {
                   value: "law",
                   text: "Law",
-                  checked: checked("profession-industries", "law")
+                  checked: checked("ra-industries", "law")
                 },
                 {
                   value: "shipping",
                   text: "Shipping",
-                  checked: checked("profession-industries", "shipping")
+                  checked: checked("ra-industries", "shipping")
                 },
                 {
                   value: "other",
                   text: "Other",
-                  checked: checked("profession-industries", "other")
+                  checked: checked("ra-industries", "other")
                 },
                 {
                   value: "security",
                   text: "Security",
-                  checked: checked("profession-industries", "security")
+                  checked: checked("ra-industries", "security")
                 },
                 {
                   value: "transport",
                   text: "Transport",
-                  checked: checked("profession-industries", "transport")
+                  checked: checked("ra-industries", "transport")
                 },
                 {
                   value: "energy",
                   text: "Energy",
-                  checked: checked("profession-industries", "energy")
+                  checked: checked("ra-industries", "energy")
                 },
                 {
                   value: "science",
                   text: "Science",
-                  checked: checked("profession-industries", "science")
+                  checked: checked("ra-industries", "science")
                 }
               ]
             }) }}
@@ -181,36 +178,33 @@
 
     <div class="govuk-grid-column-two-thirds">
 
-      {% if data['profession-keyword'] %}
-        <p class="rpr-listing__search-criteria-container"><span class="govuk-!-font-weight-bold">Keywords:</span> <strong class="govuk-tag">{{ data['profession-keyword'] }}</strong></p>
+      {% if data['ra-keyword'] %}
+        <p class="rpr-listing__search-criteria-container"><span class="govuk-!-font-weight-bold">Keywords:</span> <strong class="govuk-tag">{{ data['ra-keyword'] }}</strong></p>
       {% endif %}
 
-      {% if data['profession-nations'] %}
+      {% if data['ra-nations'] %}
         <p class="rpr-listing__search-criteria-container"><span class="govuk-!-font-weight-bold">Nations:</span> 
-        {% for nation in data['profession-nations'] %}
+        {% for nation in data['ra-nations'] %}
           <strong class="govuk-tag">{{ nation }}</strong>
         {% endfor %}
         </p>
       {% endif %}
 
-      {% if data['profession-industries'] %}
+      {% if data['ra-industries'] %}
         <p class="rpr-listing__search-criteria-container"><span class="govuk-!-font-weight-bold">Industries:</span> 
-        {% for industry in data['profession-industries'] %}
+        {% for industry in data['ra-industries'] %}
           <strong class="govuk-tag">{{ industry }}</strong>
         {% endfor %}
         </p>
       {% endif %}
       
-      <p class="rpr-listing__results-found--desktop"><span class="govuk-!-font-size-36 govuk-!-font-weight-bold">3</span> professions found.</p>
-  
+      <p class="rpr-listing__results-found--desktop"><span class="govuk-!-font-size-36 govuk-!-font-weight-bold">2</span> authorities found.</p>
+
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-      <div class="rpr-listing__profession-container">
+      <div class="rpr-listing__ra-container">
         <h2>
-          <a class="govuk-link govuk-heading-l rpr-listing__profession-title" href="profession-2-registered-gas-engineer">
-            Registered Gas Engineer
-            <span class="govuk-caption-l">United Kingdom</span>
-          </a>
+          <a class="govuk-link govuk-heading-m rpr-listing__ra-title" href="ra-2-capita-gas-registration">Capita Gas Registration and Ancillary Services Ltd</a>
         </h2>
 
         {{ govukSummaryList({
@@ -218,84 +212,32 @@
           rows: [
             {
               key: {
-                text: "Regulator"
+                text: "Nations"
               },
               value: {
-                html: "Capita Gas Registration and Ancillary Services Ltd"
-              }
-            },
-            {
-              key: {
-                text: "Sector"
-              },
-              value: {
-                text: "Construction & Engineering"
+                html: "United Kingdom"
               }
             }
           ]
         }) }}
+
       </div>
-  
+
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-      <div class="rpr-listing__profession-container">
+      <div class="rpr-listing__ra-container">
         <h2>
-          <a class="govuk-link govuk-heading-l rpr-listing__profession-title" href="profession-1-plastic-surgery">
-            Plastic Surgery
-            <span class="govuk-caption-l">United Kingdom</span>
-          </a>
+          <a class="govuk-link govuk-heading-m rpr-listing__ra-title" href="ra-1-general-medical-council">General Medical Council</a>
         </h2>
-
         {{ govukSummaryList({
           classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
           rows: [
             {
               key: {
-                text: "Regulator"
+                text: "Nations"
               },
               value: {
-                html: "General Medical Council"
-              }
-            },
-            {
-              key: {
-                text: "Sector"
-              },
-              value: {
-                text: "Health"
-              }
-            }
-          ]
-        }) }}
-      </div>
-
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-      <div class="rpr-listing__profession-container">
-        <h2>
-          <a class="govuk-link govuk-heading-l rpr-listing__profession-title" href="profession-3-nuclear-medicine">
-            Nuclear Medicine
-            <span class="govuk-caption-l">United Kingdom</span>
-          </a>
-        </h2>
-
-        {{ govukSummaryList({
-          classes: 'govuk-summary-list--no-border rpr-listing__profession-summary-list',
-          rows: [
-            {
-              key: {
-                text: "Regulator"
-              },
-              value: {
-                html: "General Medical Council"
-              }
-            },
-            {
-              key: {
-                text: "Sector"
-              },
-              value: {
-                text: "Health"
+                html: "United Kingdom"
               }
             }
           ]
