--- a/app/views/index.html
+++ b/app/views/index.html
@@ -55,12 +55,19 @@
       </div>
 
       <h3 class="govuk-heading-m" id="beta-sprint-6-professions-listing-page">
-        Iteration on profession listing page
+        Iteration on professions listing page
       </h3>
 
-      <p>Shortcuts:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="beta-sprint-6/public-facing/professions-listing-1">Iterated filter design (please perform a search on mobile)</a></li>
+        <li><a href="beta-sprint-6/public-facing/professions-listing-1">Iterated filter design (please perform a search on mobile to see the next page)</a></li>
+      </ul>
+
+      <h3 class="govuk-heading-m" id="beta-sprint-6-professions-listing-page">
+        Iteration on regulators listing page
+      </h3>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="beta-sprint-6/public-facing/ra-listing-1">Iterated filter design (please perform a search on mobile to see the next page)</a></li>
       </ul>
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
