--- a/app/views/beta-sprint-6/public-facing/ra-1-general-medical-council.html
+++ b/app/views/beta-sprint-6/public-facing/ra-1-general-medical-council.html
@@ -31,7 +31,7 @@
         rows: [
           {
             key: {
-              text: "Acroymn"
+              text: "Alternate name"
             },
             value: {
               text: "GMC"
