--- a/app/views/beta-sprint-6/public-facing/ra-listing-2.html
+++ b/app/views/beta-sprint-6/public-facing/ra-listing-2.html
@@ -27,7 +27,7 @@
 
       <p class="rpr-listing__results-found--mobile"><span class="govuk-!-font-size-36 govuk-!-font-weight-bold">2</span> authorities found.</p>
 
-      <details class="govuk-details rpr-listing__filters-container" data-module="govuk-details" open>
+      <details class="govuk-details rpr-listing__filters-container rpr-listing__filters--searched" data-module="govuk-details" open>
         <summary class="govuk-details__summary rpr-listing__fitlers-details-summary">
           <span class="govuk-details__summary-text">
             Show filters
