--- a/app/views/beta-sprint-6/national-admin/professions-listing-1.html
+++ b/app/views/beta-sprint-6/national-admin/professions-listing-1.html
@@ -301,7 +301,7 @@
             text: "Nations"
           },
           {
-            text: "s"
+            text: "Sector"
           },
           {
             text: "Regulator"
