always show open/close filter for internal pages

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -65,6 +65,11 @@ $tiny-screen: 340px;
     display: block;
   }
 }
+
+.rpr-internal__page .rpr-listing__fitlers-details-summary {
+  display: block;
+}
+
 .rpr-listing__filters-details-text {
   border: 0;
   padding-left: 0;
