--- a/app/views/beta-sprint-6/national-admin/professions-listing-1.html
+++ b/app/views/beta-sprint-6/national-admin/professions-listing-1.html
@@ -45,7 +45,7 @@
 
       <div class="rpr-internal-listing__filters-container">
 
-      <details class="govuk-details rpr-listing__filters-container" data-module="govuk-details" open>
+      <details class="govuk-details rpr-listing__filters-container" data-module="govuk-details">
         <summary class="govuk-details__summary rpr-listing__fitlers-details-summary">
           <span class="govuk-details__summary-text">
             Show filters
