--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,6 +25,41 @@
         </a>
       </div>
 
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+      <h2 class="govuk-heading-l" id="beta-sprint-7">
+        Beta sprint 7
+      </h2>
+
+      <h3 class="govuk-heading-m" id="beta-sprint-6-national-admin">
+        Iteration on profession details page - public facing & internal
+      </h3>
+
+      <p>This is the prototype of professions listing page:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>the "Add a new profession" button is moved</li>
+        <li>with the new Status filter (shows Published and Draft by default)</li>
+        <li>when the "Filter results" button is clicked, it will show archived posts no matter what options you choose (prototype only!)</li>
+      </ul>
+
+      <form action="beta-sprint-7/national-admin/professions-listing-1" method="post" class="form">
+        <input class="govuk-checkboxes__input" id="profession-status" name="profession-status" type="checkbox" value="Published" type="hidden" checked>
+        <input class="govuk-checkboxes__input" id="profession-status" name="profession-status" type="checkbox" value="Draft" type="hidden" checked>
+        <input class="govuk-checkboxes__input" id="profession-status" name="profession-status" type="checkbox" value="Archived" type="hidden">
+        {{ govukButton({
+          text: "See the professions listing page"
+        }) }}
+      </form>
+
+      <div>
+        <a href="beta-sprint-7/national-admin/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Login as an national admin
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
