--- a/app/views/beta-sprint-7/regulator/index.html
+++ b/app/views/beta-sprint-7/regulator/index.html
@@ -18,12 +18,12 @@
         active: true
       },
       {
-        href: "professions-listing-1",
+        href: "#",
         text: "Professions"
       },
       {
-        href: "ra-listing-1",
-        text: "Regulators"
+        href: "#",
+        text: "Regulator"
       },
       {
         href: "#",
@@ -58,15 +58,15 @@
 
 
       <h1 class="govuk-heading-xl">
-        <span class="govuk-caption-l">Regulated Professions Register</span>
-        Sam Smith
+        <span class="govuk-caption-l">Architect Regulation Board</span>
+        Jane Jones
       </h1>
 
       <h2 class="govuk-heading-m">Professions</h2>
-      <p class="govuk-body"><a href="professions-listing-1">Edit information about professions.</a></p>
+      <p class="govuk-body"><a href="#">Edit information about the professions you regulate.</a></p>
 
-      <h2 class="govuk-heading-m">Regulators</h2>
-      <p class="govuk-body"><a href="ra-listing-1">Edit information about regulators.</a></p>
+      <h2 class="govuk-heading-m">Regulator</h2>
+      <p class="govuk-body"><a href="#">Edit information about your regulator.</a></p>
 
       <h2 class="govuk-heading-m">Users</h2>
       <p class="govuk-body"><a href="#">Manage access to this service.</a></p>
