--- a/app/views/beta-sprint-7/national-admin/professions-listing-1.html
+++ b/app/views/beta-sprint-7/national-admin/professions-listing-1.html
@@ -187,7 +187,7 @@
                   classes: "govuk-checkboxes--small rpr-internal-listing__filter",
                   fieldset: {
                     legend: {
-                      text: "Sector",
+                      text: "Sectors",
                       isPageHeading: true,
                       classes: "govuk-fieldset__legend--s"
                     }
@@ -377,10 +377,10 @@
             text: "Nations"
           },
           {
-            text: "Sector"
+            text: "Sectors"
           },
           {
-            text: "Regulator"
+            text: "Regulators"
           },
           {
             text: "Last modified"
