--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,37 @@
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+      <h2 class="govuk-heading-l" id="beta-sprint-8">
+        Beta sprint 8
+      </h2>
+
+      <h3 class="govuk-heading-m" id="beta-sprint-8-national-admin">
+        Iteration on profession details page - public facing & internal
+      </h3>
+
+
+      <form action="beta-sprint-8/national-admin/" method="post" class="form">
+        <input class="govuk-checkboxes__input" id="profession-status" name="profession-status" type="checkbox" value="Published" type="hidden" checked>
+        <input class="govuk-checkboxes__input" id="profession-status" name="profession-status" type="checkbox" value="Draft" type="hidden" checked>
+        <input class="govuk-checkboxes__input" id="profession-status" name="profession-status" type="checkbox" value="Archived" type="hidden">
+        {{ govukButton({
+          text: "Login as an national admin",
+          classes: "govuk-button--start"
+        }) }}
+      </form>
+
+      <form action="beta-sprint-8/regulator/" method="post" class="form">
+        <input class="govuk-checkboxes__input" id="profession-status" name="profession-status" type="checkbox" value="Published" type="hidden" checked>
+        <input class="govuk-checkboxes__input" id="profession-status" name="profession-status" type="checkbox" value="Draft" type="hidden" checked>
+        <input class="govuk-checkboxes__input" id="profession-status" name="profession-status" type="checkbox" value="Archived" type="hidden">
+        {{ govukButton({
+          text: "Login as an regulator admin",
+          classes: "govuk-button--start"
+        }) }}
+      </form>
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
       <h2 class="govuk-heading-l" id="beta-sprint-7">
         Beta sprint 7
       </h2>
