--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,20 @@
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+      <h2 class="govuk-heading-l" id="beta-sprint-10">
+        Beta sprint 10
+      </h2>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="beta-sprint-10/national-admin/">Central Admin login</a></li>
+        <li><a href="beta-sprint-10/regulator-england-and-wales/">Institute of Chartered Accountants in England and Wales</a></li>
+        <li><a href="beta-sprint-10/regulator-scotland/">Institute of Chartered Accountants in Scotland</a></li>
+        <li><a href="beta-sprint-10/public-facing/profession-chartered-accountant-public">Recognition decision data on a public facing profession's page</a></li>
+        <li><a href="beta-sprint-10/public-facing/profession-chartered-accountant-public-tabs">Recognition decision data (with tabs) on a public facing profession's page</a></li>
+      </ul>
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
       <h2 class="govuk-heading-l" id="beta-sprint-9">
         Beta sprint 9
       </h2>
@@ -37,11 +51,14 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="beta-sprint-9/public-facing/01-single-regulatory">One Primary regulator</a></li>
+        <li><a href="beta-sprint-9/public-facing/01-2-single-regulatory">One Primary regulator version 2</a></li>
         <li><a href="beta-sprint-9/public-facing/02-one-chartered-body">One Chartered body</a></li>
         <li><a href="beta-sprint-9/public-facing/03-primary-and-additional-regulatory-authorities">One Primary regulator and one Additional regulators</a></li>
         <li><a href="beta-sprint-9/public-facing/04-with-qualifying-bodies-and-enforcement-bodies">One Primary regulator, several Qualifying bodies and several Enforcement bodies</a></li>
+        <li><a href="beta-sprint-9/public-facing/04-2-with-qualifying-bodies-and-enforcement-bodies">One Primary regulator, several Qualifying bodies and several Enforcement bodies version 2</a></li>
         <li><a href="beta-sprint-9/public-facing/05-several-qualifying-bodies">Several Qualifying bodies</a></li>
         <li><a href="beta-sprint-9/public-facing/06-several-qualifying-bodies-and-one-oversight-body">Several Qualifying bodies and one Oversight body </a></li>
+        <li><a href="beta-sprint-9/public-facing/06-2-several-qualifying-bodies-and-one-oversight-body">Several Qualifying bodies and one Oversight body version 2</a></li>
         <li><a href="beta-sprint-9/public-facing/07-several-chartered-body">Several Chartered bodies</a></li>
         <li><a href="beta-sprint-9/public-facing/08-one-chartered-body-and-many-awarding-bodies">One Chartered body and many Awarding bodies</a></li>
       </ul>
